--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     <!-- Main Inspinia CSS files -->
     <link href="css/animate.css" rel="stylesheet">
     <link id="loadBefore" href="css/style.css" rel="stylesheet">
+    <link id="loadBefore" href="css/custom.css" rel="stylesheet">
+
+
+
+    <!-- FooTable -->
+    <link href="/css/plugins/footable/footable.core.css" rel="stylesheet">
+
 
 
 </head>
@@ -76,6 +83,13 @@
 <script src="js/translations.js"></script>
 <script src="js/directives.js"></script>
 <script src="js/controllers.js"></script>
+<script src="js/services.js"></script>
+
+
+
+<!-- FooTable -->
+<script src="/js/plugins/footable/footable.all.min.js"></script>
+
 
 </body>
 </html>
