--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
 <!-- FooTable -->
 <script src="/js/plugins/footable/footable.all.min.js"></script>
+<script src="/js/plugins/footable/angular-footable.js"></script>
 
 
 </body>
