--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     <link href="/css/plugins/footable/footable.core.css" rel="stylesheet">
 
 
+    <link href="/css/plugins/datapicker/angular-datapicker.css" rel="stylesheet">
+    
+
+
+
+
 
 </head>
 
@@ -87,9 +93,10 @@
 
 
 
-<!-- FooTable -->
+<!-- Plugins -->
 <script src="/js/plugins/footable/footable.all.min.js"></script>
 <script src="/js/plugins/footable/angular-footable.js"></script>
+<script src="/js/plugins/datapicker/angular-datepicker.js"></script>
 
 
 </body>
