Sigo con el campo datetime

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 <!-- Plugins -->
 <script src="/js/plugins/footable/footable.all.min.js"></script>
 <script src="/js/plugins/footable/angular-footable.js"></script>
+<script src="/js/plugins/moment/moment.min.js"></script>
 <script src="/js/plugins/datapicker/angular-datepicker.js"></script>
 
 
