--- a/index.html
+++ b/index.html
@@ -29,16 +29,12 @@
 
 
 
-    <!-- FooTable -->
+    <!-- Plugins -->
     <link href="/css/plugins/footable/footable.core.css" rel="stylesheet">
-
-
     <link href="/css/plugins/datapicker/angular-datapicker.css" rel="stylesheet">
+    <link href="/css/plugins/clockpicker/clockpicker.css" rel="stylesheet">
+
     
-
-
-
-
 
 </head>
 
@@ -97,7 +93,11 @@
 <script src="/js/plugins/footable/footable.all.min.js"></script>
 <script src="/js/plugins/footable/angular-footable.js"></script>
 <script src="/js/plugins/moment/moment.min.js"></script>
+<script src="/js/plugins/moment/locale/es.js"></script>
 <script src="/js/plugins/datapicker/angular-datepicker.js"></script>
+<script src="/js/plugins/clockpicker/clockpicker.js"></script>
+
+
 
 
 </body>
