Selector de salas tuneado

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link href="/css/plugins/footable/footable.core.css" rel="stylesheet">
     <link href="/css/plugins/datapicker/angular-datapicker.css" rel="stylesheet">
     <link href="/css/plugins/clockpicker/clockpicker.css" rel="stylesheet">
+    <link href="/css/plugins/chosen/chosen.css" rel="stylesheet">
 
     
 
@@ -96,6 +97,8 @@
 <script src="/js/plugins/moment/locale/es.js"></script>
 <script src="/js/plugins/datapicker/angular-datepicker.js"></script>
 <script src="/js/plugins/clockpicker/clockpicker.js"></script>
+<script src="/js/plugins/chosen/chosen.jquery.js"></script>
+<script src="/js/plugins/chosen/chosen.js"></script>
 
 
 
