Formulario de nueva cita como una directiva reutilizable

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 <script src="/js/plugins/chosen/chosen.jquery.js"></script>
 <script src="/js/plugins/chosen/chosen.js"></script>
 
+<!-- Directives -->
+<script src="/js/directives/newMeetingForm.directive.js"></script>
 
 
 
