Probando servicios asincronos

--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
 <script src="js/translations.js"></script>
 <script src="js/directives.js"></script>
 <script src="js/controllers.js"></script>
-<script src="js/services.js"></script>
+
+<!-- Services -->
+<script src="js/services/meeting.service.js"></script>
+<script src="js/services/chat.service.js"></script>
 
 
 
