--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
 <script src="js/controllers.js"></script>
 
 <!-- Services -->
+<script src="js/services/data.service.js"></script>
 <script src="js/services/meeting.service.js"></script>
 <script src="js/services/chat.service.js"></script>
+<script src="js/services/manager.service.js"></script>
+<script src="js/services/client.service.js"></script>
 
 
 
@@ -105,6 +108,8 @@
 
 <!-- Directives -->
 <script src="/js/directives/newMeetingForm.directive.js"></script>
+<script src="/js/directives/managersList.directive.js"></script>
+<script src="/js/directives/messagesList.directive.js"></script>
 
 
 
