--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <title page-title></title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Font awesome -->
-    <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/font-awesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- Main Inspinia CSS files -->
-    <link href="css/animate.css" rel="stylesheet">
-    <link id="loadBefore" href="css/style.css" rel="stylesheet">
-    <link id="loadBefore" href="css/custom.css" rel="stylesheet">
+    <link href="/css/animate.css" rel="stylesheet">
+    <link id="loadBefore" href="/css/style.css" rel="stylesheet">
+    <link id="loadBefore" href="/css/custom.css" rel="stylesheet">
 
 
 
@@ -47,30 +47,30 @@
 <div ui-view></div>
 
 <!-- jQuery and Bootstrap -->
-<script src="js/jquery/jquery-2.1.1.min.js"></script>
-<script src="js/plugins/jquery-ui/jquery-ui.js"></script>
-<script src="js/bootstrap/bootstrap.min.js"></script>
+<script src="/js/jquery/jquery-2.1.1.min.js"></script>
+<script src="/js/plugins/jquery-ui/jquery-ui.js"></script>
+<script src="/js/bootstrap/bootstrap.min.js"></script>
 
 <!-- MetsiMenu -->
-<script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
+<script src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
 
 <!-- SlimScroll -->
-<script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+<script src="/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
 <!-- Peace JS -->
-<script src="js/plugins/pace/pace.min.js"></script>
+<script src="/js/plugins/pace/pace.min.js"></script>
 
 <!-- Custom and plugin javascript -->
-<script src="js/inspinia.js"></script>
+<script src="/js/app/inspinia.js"></script>
 
 <!-- Main Angular scripts-->
-<script src="js/angular/angular.min.js"></script>
-<script src="js/angular/angular-sanitize.js"></script>
-<script src="js/plugins/oclazyload/dist/ocLazyLoad.min.js"></script>
-<script src="js/angular-translate/angular-translate.min.js"></script>
-<script src="js/ui-router/angular-ui-router.min.js"></script>
-<script src="js/bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
-<script src="js/plugins/angular-idle/angular-idle.js"></script>
+<script src="/js/angular/angular.min.js"></script>
+<script src="/js/angular/angular-sanitize.js"></script>
+<script src="/js/plugins/oclazyload/dist/ocLazyLoad.min.js"></script>
+<script src="/js/angular-translate/angular-translate.min.js"></script>
+<script src="/js/ui-router/angular-ui-router.min.js"></script>
+<script src="/js/bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
+<script src="/js/plugins/angular-idle/angular-idle.js"></script>
 
 <!--
  You need to include this script on any page that has a Google Map.
@@ -81,20 +81,18 @@
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQTpXj82d8UpCi97wzo_nKXL7nYrd4G70"></script>
 
 <!-- Anglar App Script -->
-<script src="js/app.js"></script>
-<script src="js/config.js"></script>
-<script src="js/translations.js"></script>
-<script src="js/directives.js"></script>
-<script src="js/controllers.js"></script>
+<script src="/js/app/app.js"></script>
+<script src="/js/app/config.js"></script>
+<script src="/js/app/translations.js"></script>
+<script src="/js/app/directives.js"></script>
+<script src="/js/app/controllers.js"></script>
 
 <!-- Services -->
-<script src="js/services/data.service.js"></script>
-<script src="js/services/meeting.service.js"></script>
-<script src="js/services/chat.service.js"></script>
-<script src="js/services/manager.service.js"></script>
-<script src="js/services/client.service.js"></script>
-
-
+<script src="/js/app/services/data.service.js"></script>
+<script src="/js/app/services/meeting.service.js"></script>
+<script src="/js/app/services/chat.service.js"></script>
+<script src="/js/app/services/manager.service.js"></script>
+<script src="/js/app/services/client.service.js"></script>
 
 <!-- Plugins -->
 <script src="/js/plugins/footable/footable.all.min.js"></script>
@@ -107,9 +105,9 @@
 <script src="/js/plugins/chosen/chosen.js"></script>
 
 <!-- Directives -->
-<script src="/js/directives/newMeetingForm.directive.js"></script>
-<script src="/js/directives/managersList.directive.js"></script>
-<script src="/js/directives/messagesList.directive.js"></script>
+<script src="/js/app/directives/newMeetingForm.directive.js"></script>
+<script src="/js/app/directives/managersList.directive.js"></script>
+<script src="/js/app/directives/messagesList.directive.js"></script>
 
 
 
