Eliminado el plugin lazyload

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <!-- Main Inspinia CSS files -->
     <link href="/css/animate.css" rel="stylesheet">
-    <link id="loadBefore" href="/css/style.css" rel="stylesheet">
-    <link id="loadBefore" href="/css/custom.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/custom.css" rel="stylesheet">
 
 
 
@@ -35,7 +35,9 @@
     <link href="/css/plugins/clockpicker/clockpicker.css" rel="stylesheet">
     <link href="/css/plugins/chosen/chosen.css" rel="stylesheet">
 
-    
+    <link href="/css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet">
+    <link href="/css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet">
+    <link href="/css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet">
 
 </head>
 
@@ -50,6 +52,10 @@
 <script src="/js/jquery/jquery-2.1.1.min.js"></script>
 <script src="/js/plugins/jquery-ui/jquery-ui.js"></script>
 <script src="/js/bootstrap/bootstrap.min.js"></script>
+
+<!-- Calendar -->
+<script src="/js/plugins/fullcalendar/fullcalendar.min.js"></script>
+<script src="/js/plugins/fullcalendar/gcal.js"></script>
 
 <!-- MetsiMenu -->
 <script src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
@@ -103,6 +109,7 @@
 <script src="/js/plugins/clockpicker/clockpicker.js"></script>
 <script src="/js/plugins/chosen/chosen.jquery.js"></script>
 <script src="/js/plugins/chosen/chosen.js"></script>
+<script src="/js/plugins/fullcalendar/calendar.js"></script>
 
 <!-- Directives -->
 <script src="/js/app/directives/newMeetingForm.directive.js"></script>
