Eventos de calendario funcionando

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
 <!-- Services -->
 <script src="/js/app/services/data.service.js"></script>
+<script src="/js/app/services/helper.service.js"></script>
 <script src="/js/app/services/meeting.service.js"></script>
 <script src="/js/app/services/chat.service.js"></script>
 <script src="/js/app/services/manager.service.js"></script>
