Pantalla modificación de cita

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
 <!-- Directives -->
 <script src="/js/app/directives/newMeetingForm.directive.js"></script>
+<script src="/js/app/directives/editMeetingForm.directive.js"></script>
 <script src="/js/app/directives/managersList.directive.js"></script>
 <script src="/js/app/directives/messagesList.directive.js"></script>
 
