Calendario como directiva y cambios varios

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 <script src="/js/plugins/fullcalendar/calendar.js"></script>
 
 <!-- Directives -->
+<script src="/js/app/directives/calendar.directive.js"></script>
 <script src="/js/app/directives/newMeetingForm.directive.js"></script>
 <script src="/js/app/directives/editMeetingForm.directive.js"></script>
 <script src="/js/app/directives/managersList.directive.js"></script>
