--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <link href="/css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet">
     <link href="/css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet">
     <link href="/css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet">
+    <link href="/css/plugins/select2/select2.min.css" rel="stylesheet">
+
 
 </head>
 
@@ -110,6 +112,8 @@
 <script src="/js/plugins/chosen/chosen.jquery.js"></script>
 <script src="/js/plugins/chosen/chosen.js"></script>
 <script src="/js/plugins/fullcalendar/calendar.js"></script>
+<script src="/js/plugins/select2/select2.full.min.js"></script>
+
 
 <!-- Directives -->
 <script src="/js/app/directives/calendar.directive.js"></script>
