--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <link href="/css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet">
     <link href="/css/plugins/select2/select2.min.css" rel="stylesheet">
 
+    
+    <link href="/css/jquery.e-calendar.css" rel="stylesheet">
+
 
 </head>
 
