--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link href="/css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet">
     <link href="/css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet">
     <link href="/css/plugins/select2/select2.min.css" rel="stylesheet">
+    
 
     
     <link href="/css/jquery.e-calendar.css" rel="stylesheet">
@@ -116,6 +117,7 @@
 <script src="/js/plugins/chosen/chosen.js"></script>
 <script src="/js/plugins/fullcalendar/calendar.js"></script>
 <script src="/js/plugins/select2/select2.full.min.js"></script>
+<script src="/js/plugins/jquery.toaster.js"></script>
 
 
 <!-- Directives -->
